feat(wp-09): add site enhancements suite
- Add madge for circular dependency detection
- Add commitlint for commit message linting
- Add translation validation script (4 locales, 177 keys)
- Update CI workflow with new quality checks
- Rewrite README.md (~10KB tucsenberg style)
- Add feature flags module for configuration-driven features
- Add WhatsApp Business integration with floating button and product CTA
- Support RTL-aware positioning for Arabic locale

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -1,4 +1,7 @@
 commit-msg:
+  commands:
+    commitlint:
+      run: pnpm commitlint --edit {1}
   scripts:
     'commit_check':
       runner: bash
