--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,6 +62,12 @@ jobs:
       - name: 🔗 Check dependencies (dep-cruise)
         run: pnpm lint:deps
 
+      - name: 🔄 Check circular dependencies (Madge)
+        run: pnpm circular:check
+
+      - name: 🌐 Validate translations
+        run: pnpm validate:translations
+
       - name: 🐍 Setup Python for Semgrep
         uses: actions/setup-python@v5
         with:
