--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "lint:deps": "depcruise --config config/dependency-cruiser.cjs src",
     "lint:security": "semgrep --config config/semgrep.yml --error src",
     "audit:seo": "lhci autorun --config config/lighthouserc.js",
-    "quality": "pnpm typecheck && pnpm lint && pnpm lint:unused && pnpm lint:dup && pnpm lint:deps"
+    "quality": "pnpm typecheck && pnpm lint && pnpm lint:unused && pnpm lint:dup && pnpm lint:deps",
+    "circular:check": "madge --circular --extensions ts,tsx src/",
+    "validate:translations": "tsx scripts/validate-translations.ts"
   },
   "commitlint": {
     "extends": [
@@ -115,6 +117,7 @@
     "jscpd": "^4.0.5",
     "knip": "^5.72.0",
     "lefthook": "^1.11.13",
+    "madge": "^8.0.0",
     "markdownlint": "^0.38.0",
     "markdownlint-cli2": "^0.18.0",
     "playwright": "^1.52.0",
@@ -122,6 +125,7 @@
     "prettier-plugin-packagejson": "^2.5.14",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4.1.7",
+    "tsx": "^4.21.0",
     "tw-animate-css": "^1.3.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.32.1",
