chore: optimize project configuration for Cloudflare Workers
P0 - Build quality gates restored:
- Remove eslint.ignoreDuringBuilds and typescript.ignoreBuildErrors
- Remove invalid react-hooks/react-compiler ESLint rule
- Reorganize VeliteWebpackPlugin before nextConfig

P1 - Cloudflare Workers optimization:
- Add poweredByHeader: false
- Add images.unoptimized: true
- Add @cloudflare/workers-types with node types

P1 - TypeScript strictness:
- Enable verbatimModuleSyntax for explicit import types

P1 - Vitest modernization:
- Upgrade vitest 3.1.4 → 3.2.4
- Migrate to inline test.projects config
- Remove deprecated vitest.workspace.ts

--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "release": "changeset tag && git push --follow-tags",
     "spellcheck": "cspell \"**\" --gitignore --dot --no-progress --unique",
     "start": "next start",
-    "test": "vitest --workspace=vitest.workspace.ts --browser.headless --run",
-    "test:browser": "vitest --workspace=vitest.workspace.ts",
+    "test": "vitest --browser.headless --run",
+    "test:browser": "vitest",
     "test:e2e": "playwright test",
-    "test:watch": "vitest --workspace=vitest.workspace.ts --browser.headless",
+    "test:watch": "vitest --browser.headless",
     "typecheck": "tsc",
     "upload": "opennextjs-cloudflare build && opennextjs-cloudflare upload",
     "lint:unused": "knip --config config/knip.jsonc",
@@ -72,6 +72,7 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.1",
     "@changesets/cli": "^2.29.4",
+    "@cloudflare/workers-types": "^4.20251209.0",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@commitlint/cz-commitlint": "^19.8.1",
@@ -95,7 +96,7 @@
     "@types/react-dom": "^19.1.5",
     "@typescript-eslint/utils": "^8.32.1",
     "@vitejs/plugin-react": "^4.5.0",
-    "@vitest/browser": "^3.1.4",
+    "@vitest/browser": "^3.2.4",
     "commitizen": "^4.3.1",
     "cspell": "^9.0.2",
     "dependency-cruiser": "^17.3.2",
@@ -130,7 +131,7 @@
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.32.1",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.1.4",
+    "vitest": "^3.2.4",
     "vitest-browser-react": "^0.1.1",
     "wrangler": "^4.16.1"
   },
