fix(ci): add velite content generation before typecheck
.velite directory is gitignored (generated at build time).
CI needs to run velite before typecheck to generate type declarations.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,9 @@ jobs:
       - name: 🔧 Install Playwright Browsers
         run: pnpm playwright install --with-deps
 
+      - name: 📄 Generate Velite content
+        run: pnpm velite
+
       - name: 📝 Spellcheck
         run: pnpm spellcheck
 
