--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "start": "next start",
     "test": "vitest --browser.headless --run",
     "test:browser": "vitest",
+    "test:coverage": "vitest run --coverage",
     "test:e2e": "playwright test",
     "test:watch": "vitest --browser.headless",
     "typecheck": "tsc",
@@ -98,6 +99,7 @@
     "@typescript-eslint/utils": "^8.32.1",
     "@vitejs/plugin-react": "^4.5.0",
     "@vitest/browser": "^3.2.4",
+    "@vitest/coverage-v8": "^3.2.4",
     "commitizen": "^4.3.1",
     "cspell": "^9.0.2",
     "dependency-cruiser": "^17.3.2",
@@ -111,6 +113,7 @@
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-n": "^17.18.0",
     "eslint-plugin-react-hooks": "6.0.0-rc.1",
+    "eslint-plugin-react-you-might-not-need-an-effect": "^0.7.0",
     "eslint-plugin-security": "^3.0.1",
     "eslint-plugin-unicorn": "^59.0.1",
     "globals": "^16.1.0",
