--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,8 +83,16 @@ jobs:
           pip install -r config/semgrep-requirements.txt
           pnpm lint:security
 
-      - name: 🧪 Tests
-        run: pnpm test
+      - name: 🧪 Tests with Coverage
+        run: pnpm test:coverage
+
+      - name: 📊 Upload coverage to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          files: ./coverage/lcov.info
+          flags: unittests
+          fail_ci_if_error: false
+          verbose: true
 
       - name: 🧪 E2E Tests
         run: pnpm test:e2e
