fix(ci): add --browser.headless to test:coverage command
CI environment (GitHub Actions) runs headless without a display.
Browser tests require --browser.headless flag to launch Chromium
in headless mode. This aligns test:coverage with the test script.

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "start": "next start",
     "test": "vitest --browser.headless --run",
     "test:browser": "vitest",
-    "test:coverage": "vitest run --coverage",
+    "test:coverage": "vitest run --coverage --browser.headless",
     "test:e2e": "playwright test",
     "test:watch": "vitest --browser.headless",
     "typecheck": "tsc",
