--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.510.0",
+    "motion": "^12.23.26",
     "next": "^15.3.2",
     "next-intl": "^4.5.8",
     "next-nprogress-bar": "^2.4.7",
