--- a/package.json
+++ b/package.json
@@ -48,96 +48,97 @@
     }
   },
   "dependencies": {
-    "@marsidev/react-turnstile": "^1.3.1",
+    "@marsidev/react-turnstile": "^1.4.0",
     "@opennextjs/cloudflare": "1.14.5",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
-    "@t3-oss/env-nextjs": "^0.13.4",
-    "arktype": "^2.1.20",
+    "@t3-oss/env-nextjs": "^0.13.8",
+    "arktype": "^2.1.28",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.510.0",
+    "lucide-react": "^0.560.0",
     "motion": "^12.23.26",
     "next": "^15.3.8",
     "next-intl": "^4.5.8",
     "next-nprogress-bar": "^2.4.7",
     "next-themes": "^0.4.6",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.0",
+    "tailwind-merge": "^3.4.0",
     "velite": "^0.3.1",
     "zod": "^4.1.13"
   },
   "devDependencies": {
-    "@changesets/changelog-github": "^0.5.1",
+    "@changesets/changelog-github": "^0.5.2",
     "@changesets/cli": "^2.29.4",
     "@cloudflare/workers-types": "^4.20251212.0",
-    "@commitlint/cli": "^19.8.1",
-    "@commitlint/config-conventional": "^19.8.1",
+    "@commitlint/cli": "^20.2.0",
+    "@commitlint/config-conventional": "^20.2.0",
     "@commitlint/cz-commitlint": "^19.8.1",
     "@eslint-community/eslint-plugin-eslint-comments": "^4.5.0",
-    "@eslint-react/eslint-plugin": "^1.49.0",
-    "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.27.0",
-    "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
+    "@eslint-react/eslint-plugin": "^2.3.13",
+    "@eslint/eslintrc": "^3.3.3",
+    "@eslint/js": "^9.39.1",
+    "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
     "@lhci/cli": "^0.15.1",
     "@mdx-js/loader": "^3.1.1",
     "@mdx-js/react": "^3.1.1",
     "@next/eslint-plugin-next": "^15.3.2",
-    "@playwright/test": "^1.52.0",
-    "@tailwindcss/postcss": "^4.1.7",
+    "@playwright/test": "^1.57.0",
+    "@tailwindcss/postcss": "^4.1.18",
     "@total-typescript/ts-reset": "^0.6.1",
-    "@types/eslint-plugin-jsx-a11y": "^6.10.0",
+    "@types/eslint-plugin-jsx-a11y": "^6.10.1",
     "@types/eslint-plugin-security": "^3.0.0",
     "@types/mdx": "^2.0.13",
     "@types/node": "^22.15.21",
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
-    "@typescript-eslint/utils": "^8.32.1",
-    "@vitejs/plugin-react": "^4.5.0",
-    "@vitest/browser": "^3.2.4",
-    "@vitest/coverage-v8": "^3.2.4",
+    "@typescript-eslint/utils": "^8.49.0",
+    "@vitejs/plugin-react": "^5.1.2",
+    "@vitest/browser": "^4.0.15",
+    "@vitest/browser-playwright": "^4.0.15",
+    "@vitest/coverage-v8": "^4.0.15",
     "commitizen": "^4.3.1",
-    "cspell": "^9.0.2",
+    "cspell": "^9.4.0",
     "dependency-cruiser": "^17.3.2",
     "dotenv": "^16.5.0",
-    "eslint": "^9.27.0",
+    "eslint": "^9.39.1",
     "eslint-config-next": "^15.3.2",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-import-resolver-typescript": "^4.4.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-drizzle": "^0.2.3",
-    "eslint-plugin-import-x": "^4.13.0",
+    "eslint-plugin-import-x": "^4.16.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-n": "^17.18.0",
-    "eslint-plugin-react-hooks": "6.0.0-rc.1",
+    "eslint-plugin-n": "^17.23.1",
+    "eslint-plugin-react-hooks": "7.0.1",
     "eslint-plugin-react-you-might-not-need-an-effect": "^0.7.0",
     "eslint-plugin-security": "^3.0.1",
-    "eslint-plugin-unicorn": "^59.0.1",
-    "globals": "^16.1.0",
+    "eslint-plugin-unicorn": "^62.0.0",
+    "globals": "^16.5.0",
     "gray-matter": "^4.0.3",
     "inquirer": "^9.3.7",
     "jscpd": "^4.0.5",
-    "knip": "^5.72.0",
-    "lefthook": "^1.11.13",
+    "knip": "^5.73.3",
+    "lefthook": "^2.0.9",
     "madge": "^8.0.0",
     "markdownlint": "^0.38.0",
     "markdownlint-cli2": "^0.18.0",
-    "playwright": "^1.52.0",
-    "prettier": "^3.5.3",
-    "prettier-plugin-packagejson": "^2.5.14",
+    "playwright": "^1.57.0",
+    "prettier": "^3.7.4",
+    "prettier-plugin-packagejson": "^2.5.20",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^4.1.7",
+    "tailwindcss": "^4.1.18",
     "tsx": "^4.21.0",
     "tw-animate-css": "^1.3.0",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.32.1",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.49.0",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.2.4",
-    "vitest-browser-react": "^0.1.1",
+    "vitest": "^4.0.15",
+    "vitest-browser-react": "^2.0.2",
     "wrangler": "^4.54.0"
   },
   "packageManager": "pnpm@10.11.0",
