feat(arch): implement P0/P1/P2 architecture improvements
## P0 - Critical Foundation
- D1 baseline migration (0000_init.sql) with schema, indexes, constraints
- MDX Server Component refactor (remove client-side eval)
- Slug single source of truth (src/data/cases.ts, news.ts)
- Full metadata coverage for all routes with i18n
- Add .dev.vars.example template

## P1 - Core Improvements
- Dynamic alternates generation from locales config
- Sitemap force-static with deterministic BUILD_DATE
- Rate limit configurable via function params
- TypeScript messages type safety (intl.d.ts + AppConfig)
- Radix navigation-menu.tsx 'use client' directive
- Queue enablement documentation

## P2 - Extended Enhancements
- Error boundaries (not-found.tsx + error.tsx) with i18n
- D1 access layer constants (src/lib/d1/schema.ts)
- External API timeout/retry (fetch-with-retry.ts)
- React 19 ref-as-prop pattern (Input/Textarea)
- Dynamic imports for low-frequency components
- Turnstile verification with timeout/retry

Verified: typecheck ✓ | lint ✓ | build ✓ (106 pages)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,5 +27,15 @@
   ],
 
   // Typescript
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "i18n-ally.localesPaths": [
+    "messages",
+    "src/i18n",
+    "coverage/components/i18n",
+    "coverage/lib/i18n",
+    "src/components/i18n",
+    "src/lib/i18n",
+    "coverage/lcov-report/components/i18n",
+    "coverage/lcov-report/lib/i18n"
+  ]
 }
