--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts",
     "circular:check": "madge --circular --extensions ts,tsx src/",
     "commit": "git-cz",
+    "d1:migrate": "wrangler d1 migrations apply CONTACT_FORM_D1 --local",
+    "d1:migrate:remote": "wrangler d1 migrations apply CONTACT_FORM_D1 --remote",
     "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
     "dev": "next dev --turbopack",
     "format": "pnpm format:check --write",
@@ -63,6 +65,7 @@
     "motion": "^12.23.26",
     "next": "^15.3.8",
     "next-intl": "^4.5.8",
+    "next-mdx-remote": "^5.0.0",
     "next-nprogress-bar": "^2.4.7",
     "next-themes": "^0.4.6",
     "react": "^19.2.3",
